another fix for text alignment on taxon page taxonomy tabs

--- a/app/assets/stylesheets/shared/taxonomic_branch.scss
+++ b/app/assets/stylesheets/shared/taxonomic_branch.scss
@@ -103,6 +103,9 @@
     i {
       font-size: smaller;
     }
+    .SplitTaxon a {
+      vertical-align: bottom;
+    }
   }
   .sciname.species,
   .sciname.subspecies,
